Face Orientation overlays not working when object has the "Show in Front" option enabled. #75910

Closed
opened 2020-04-19 23:46:22 +02:00 by Gustavo · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-17 20:03, hash: 76b3aac802
Worked: (newest version of Blender that worked as expected)

Short description of error
Face Orientation overlays not working when object has the "Show in Front" option enabled.

Exact steps for others to reproduce the error
1 - Select any object.
2 - Go to the Viewport Display Panel of the object tab of the properties editor and enable the "In Front" option.
3 - Go to the viewport overlays menu and enable the "Face Orientation" option.

When the "In Front" option is enabled the object does not shows the face orientations in the red and blue colors as it does in Blender 2.82.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-17 20:03, hash: `76b3aac802` Worked: (newest version of Blender that worked as expected) **Short description of error** Face Orientation overlays not working when object has the "Show in Front" option enabled. **Exact steps for others to reproduce the error** 1 - Select any object. 2 - Go to the Viewport Display Panel of the object tab of the properties editor and enable the "In Front" option. 3 - Go to the viewport overlays menu and enable the "Face Orientation" option. When the "In Front" option is enabled the object does not shows the face orientations in the red and blue colors as it does in Blender 2.82.
Author

Added subscriber: @GustavoRosa

Added subscriber: @GustavoRosa
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

it does in Blender 2.82.

does 2.82a work ?

> it does in Blender 2.82. does 2.82a work ?

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by 84e40ee846

This issue was referenced by 84e40ee84692004fcd7e9e229c5f4adf8cf326be

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-04-27 21:15:17 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75910
No description provided.