Fix T75910 Overlay: Face Orientation not working for "In Front" objects