source/blender/draw/engines/overlay/overlay_private.h
@@ -78,7 +78,7 @@ typedef struct OVERLAY_PassList {
   DRWPass *extra_centers_ps;
   DRWPass *extra_grid_ps;
   DRWPass *gpencil_canvas_ps;
-  DRWPass *facing_ps;
+  DRWPass *facing_ps[2];
   DRWPass *grid_ps;
   DRWPass *image_background_ps;
   DRWPass *image_empties_ps;
@@ -239,7 +239,7 @@ typedef struct OVERLAY_PrivateData {
   DRWShadingGroup *edit_text_overlay_grp;
   DRWShadingGroup *edit_text_wire_grp[2];
   DRWShadingGroup *extra_grid_grp;
-  DRWShadingGroup *facing_grp;
+  DRWShadingGroup *facing_grp[2];
   DRWShadingGroup *motion_path_lines_grp;
   DRWShadingGroup *motion_path_points_grp;
   DRWShadingGroup *outlines_grp;
@@ -500,6 +500,7 @@ void OVERLAY_facing_init(OVERLAY_Data *vedata);
 void OVERLAY_facing_cache_init(OVERLAY_Data *vedata);
 void OVERLAY_facing_cache_populate(OVERLAY_Data *vedata, Object *ob);
 void OVERLAY_facing_draw(OVERLAY_Data *vedata);
+void OVERLAY_facing_infront_draw(OVERLAY_Data *vedata);
 
 void OVERLAY_grid_init(OVERLAY_Data *vedata);
 void OVERLAY_grid_cache_init(OVERLAY_Data *vedata);
